# firesim

./: CMakeLists.txt  Makefile  README.md  compile_commands.json
src/: main.cpp
src/core/: shaders.h  simulation.cpp  simulation.h
src/ui/: sidebar.cpp  sidebar.h
